<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:clickable="false"
    android:elevation="@dimen/design_appbar_elevation"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layout_detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_detail"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:contentDescription="@null"
                android:src="@drawable/ic_back"
                android:tint="@color/abu_hitam" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_foto_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                app:cardWidth="200dp"
                tools:listitem="@layout/item_foto_detail" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="6"
                        android:textAllCaps="true"
                        android:textColor="@color/abu_putih"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="@string/nama_pemain" />
                    <TextView
                        android:id="@+id/tv_posisi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/klub"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/abu_hitam" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_back2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:contentDescription="@null"
                android:src="@drawable/ic_back"
                android:tint="@color/abu_hitam" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:src="@drawable/me"
                app:civ_border_color="@color/hitam"
                app:civ_border_width="2dp" />
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/nama_saya"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/hitam" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_about"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/umur_saya"
                        android:textColor="@color/abu_hitam" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/alamat_saya"
                        android:textColor="@color/abu_hitam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/email_saya"
                        android:textColor="@color/abu_hitam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/sosmed_saya"
                        android:textColor="@color/abu_hitam" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/github_saya"
                        android:textColor="@color/abu_hitam" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>